[package]
authors = ["Sil Vaes <sil.vaes@student.uhasselt.be>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
ecdsa = {version = "0.16.6", features = ["sha2", "serde", "verifying", "signing", "pkcs8"]}
hex = "0.4.3"
itertools = "0.10.5"
jetro = "0.2.1"
libp2p = "0.51.2"
log = "0.4.17"
once_cell = "1.17.1"
openssl = "0.10.50"
parking_lot = "0.12.1"
pretty_env_logger = "0.4.0"
secp256k1 = "0.27.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_bytes = "0.11.9"
serde_json = "1.0.95"
sha2 = "0.10.6"
tokio = {version = "1.27.0", features = ["macros"]}
warp = "0.3.4"

[package.metadata.nix]
app = true
build = true
library = false
systems = [ "x86_64-linux" ]
